Error fix and add the information for 2022 ICRA paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,13 +5,16 @@
 
 @INPROCEEDINGS{icra2022_kangneoung_accepted,
   author={Lee, Kangneoung and Kalyanram, Vishnu and Zheng, Chuanqi and Sane, Siddharth and Lee, Kiju},
-  booktitle={2022 IEEE International Conference on Robotics and Automation (ICRA) accepted}, 
+  booktitle={2022 International Conference on Robotics and Automation (ICRA)}, 
   title={Vision-based Ascending Staircase Detection with Interpretable Classification Model for Stair Climbing Robots}, 
   year={2022},
   volume={},
   number={},
-  pages={},
-  doi={},
+  pages={6564-6570},
+  doi={10.1109/ICRA46639.2022.9812456},
+  url={https://ieeexplore.ieee.org/document/9812456},
+  html={https://ieeexplore.ieee.org/document/9812456},
+  code={https://github.com/KangneoungLee/staircase_detection},
   selected={true}
 }
 
