--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,3 +18,17 @@
   selected={true}
 }
 
+@INPROCEEDINGS{tro_accepted,
+  author={Zheng, Chuanqi and Sane, Siddharth and Lee, Kangneoung and Kalyanram, Vishnu and Lee, Kiju},
+  booktitle={IEEE Transactions on Robotics}, 
+  title={a-WaLTR: Adaptive Wheel-and-Leg Transformable Robot for Versatile Multiterrain Locomotion}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={},
+  doi={10.1109/TRO.2022.3226114},
+  url={},
+  html={},
+  code={},
+  selected={true}
+}
