--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@INPROCEEDINGS{icra2022_kangneoung_accepted,
+@INPROCEEDINGS{icra2022,
   author={Lee, Kangneoung and Kalyanram, Vishnu and Zheng, Chuanqi and Sane, Siddharth and Lee, Kiju},
   booktitle={2022 International Conference on Robotics and Automation (ICRA)}, 
   title={Vision-based Ascending Staircase Detection with Interpretable Classification Model for Stair Climbing Robots}, 
@@ -18,16 +18,77 @@
   selected={true}
 }
 
-@INPROCEEDINGS{tro_accepted,
+@ARTICLE{tro2022,
   author={Zheng, Chuanqi and Sane, Siddharth and Lee, Kangneoung and Kalyanram, Vishnu and Lee, Kiju},
   booktitle={IEEE Transactions on Robotics}, 
   title={a-WaLTR: Adaptive Wheel-and-Leg Transformable Robot for Versatile Multiterrain Locomotion}, 
-  year={2022},
-  volume={},
-  number={},
-  pages={},
+  year={2023},
+  volume={39},
+  number={2},
+  pages={941-958},
   doi={10.1109/TRO.2022.3226114},
   url={},
   html={},
+  selected={true}
+}
+
+@ARTICLE{ieee_access2024,
+  author={Lee, Kangneoung and Lee, Kiju},
+  booktitle={IEEE Access}, 
+  title={Adaptive Centroidal Voronoi Tessellation With Agent Dropout and Reinsertion for Multi-Agent Non-Convex Area Coverage}, 
+  year={2024},
+  volume={12},
+  number={},
+  pages={5503-5516},
+  doi={10.1109/ACCESS.2024.3351052},
+  url={},
+  html={},
+  selected={true}
+}
+
+@ARTICLE{jfr2024,
+  author={Lee, Kangneoung and Lee, Kiju},
+  booktitle={Journal of Field Robotics},
+  title={Terrain-Aware Path Planning via Semantic Segmentation and Uncertainty Rejection Filter with Adversarial Noise for Mobile Robots}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  url={},
+  note={In review},
+  html={},
+  selected={true}
+}
+
+@INPROCEEDINGS{ur2024,
+  author={Wei, Yuan and Lee, Kangneoung and Lee, Kiju},
+  booktitle={2024 21th International Conference on Ubiquitous Robot (UR)}, 
+  title={Autonomous Field Navigation of Mobile Robots for Agricultural Crop Monitoring}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  url={},
+  html={},
+  code={},
+  note={In review},
+  selected={true}
+}
+
+@INPROCEEDINGS{rss2024,
+  author={Lee, Kangneoung and Lee, Kiju},
+  booktitle={Robotics: Sicence and Systems (RSS)}, 
+  title={Demonstrating Decentralized Multi-Robot Coverage Control via Self-Dropout and Voronoi Tessellation}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  url={},
+  html={},
+  code={},
+  note={In review},
   selected={true}
 }
