--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   pages={941-958},
   doi={10.1109/TRO.2022.3226114},
   url={},
-  html={},
+  html={https://ieeexplore.ieee.org/document/9985429},
   selected={true}
 }
 
@@ -42,7 +42,7 @@
   pages={5503-5516},
   doi={10.1109/ACCESS.2024.3351052},
   url={},
-  html={},
+  html={https://ieeexplore.ieee.org/document/10382493},
   selected={true}
 }
 
@@ -57,7 +57,6 @@
   doi={},
   url={},
   note={In review},
-  html={},
   selected={true}
 }
 
@@ -71,8 +70,6 @@
   pages={},
   doi={},
   url={},
-  html={},
-  code={},
   note={In review},
   selected={true}
 }
@@ -87,8 +84,6 @@
   pages={},
   doi={},
   url={},
-  html={},
-  code={},
   note={In review},
   selected={true}
 }
