--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,19 +43,21 @@
   doi={10.1109/ACCESS.2024.3351052},
   url={},
   html={https://ieeexplore.ieee.org/document/10382493},
+  code={https://github.com/KangneoungLee/DynamicVoronoi},
   selected={true}
 }
 
-@ARTICLE{jfr2024,
+@ARTICLE{jfr20
   author={Lee, Kangneoung and Lee, Kiju},
   booktitle={Journal of Field Robotics},
-  title={Terrain-Aware Path Planning via Semantic Segmentation and Uncertainty Rejection Filter with Adversarial Noise for Mobile Robots}, 
+  title={Terrain-Aware Path Planning via Semantic Segmentation and Uncertainty Rejection Filter with Adversarial Noise for Mobile Robots, In review}, 
   year={2024},
   volume={},
   number={},
   pages={},
   doi={},
   url={},
+  code={https://github.com/KangneoungLee/pspnet_urf_ros},
   note={In review},
   selected={true}
 }
@@ -63,7 +65,7 @@
 @INPROCEEDINGS{ur2024,
   author={Wei, Yuan and Lee, Kangneoung and Lee, Kiju},
   booktitle={2024 21th International Conference on Ubiquitous Robot (UR)}, 
-  title={Autonomous Field Navigation of Mobile Robots for Agricultural Crop Monitoring}, 
+  title={Autonomous Field Navigation of Mobile Robots for Agricultural Crop Monitoring, In review}, 
   year={2024},
   volume={},
   number={},
@@ -77,13 +79,14 @@
 @INPROCEEDINGS{rss2024,
   author={Lee, Kangneoung and Lee, Kiju},
   booktitle={Robotics: Sicence and Systems (RSS)}, 
-  title={Demonstrating Decentralized Multi-Robot Coverage Control via Self-Dropout and Voronoi Tessellation}, 
+  title={Demonstrating Decentralized Multi-Robot Coverage Control via Self-Dropout and Voronoi Tessellation, In review}, 
   year={2024},
   volume={},
   number={},
   pages={},
   doi={},
   url={},
+  code={https://github.com/KangneoungLee/DecentVoronoi},
   note={In review},
   selected={true}
 }
