Update papers.bib error fix

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
   selected={true}
 }
 
-@ARTICLE{jfr20
+@ARTICLE{jfr2024,
   author={Lee, Kangneoung and Lee, Kiju},
   booktitle={Journal of Field Robotics},
   title={Terrain-Aware Path Planning via Semantic Segmentation and Uncertainty Rejection Filter with Adversarial Noise for Mobile Robots, In review}, 
